fixed horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: .5rem;
-    margin-bottom: .5rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
     gap: 1rem;
 }
 
@@ -110,7 +110,8 @@ header {
 
 /* NAVIGATION */
 nav {
-    background-color: var(--color-5);
+    /* background-color: var(--color-5); */
+    width: 100%;
 }
 
 nav ul {
@@ -118,6 +119,7 @@ nav ul {
 }
 
 nav li {
+    background-color: var(--color-5);
     list-style: none;
     flex: 1 1 auto;
 }
@@ -125,13 +127,13 @@ nav li {
 nav a {
     text-decoration: none;
     display: block;
-    padding: 1rem .5rem;
+    padding: 1rem 0;
     color: var(--color-6) !important;
     text-align: center;
 }
 
 nav a:hover {
-    background-color: var(--color-2);
+    background-color: var(--color-5);
 }
 
 /*  NAVIGATION ENDS */
@@ -605,6 +607,21 @@ footer {
 
     h2 {
         font-size: 1.5em;
+    }
+
+    nav a {
+        padding: 1rem .5rem;
+    }
+
+    nav li {
+        border-top: 5px solid var(--color-6);
+        border-bottom: 5px solid var(--color-6);
+    }
+
+    nav li:hover {
+        border-top: 5px solid var(--color-5);
+        border-bottom: 5px solid var(--color-5);
+        border-radius: 5px;
     }
 
     .banner {
